--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: default
   </header>
   <div class="post-content e-content" itemprop="articleBody">
     {{ post.content }}
+    {% include ads.html %}
   </div>  
   {% include share.html %}
   <p>
