--- a/index.html
+++ b/index.html
@@ -37,3 +37,5 @@ layout: default
     <a href="{{ paginator.next_page_path | relative_url }}" class="next">Next</a>
   {% endif %}
 </div>
+
+{% include cookie-consent.html %}
