Add archives page description

--- a/archives.html
+++ b/archives.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Archives
+description: Blog archive containing all posts groupped by year published
 permalink: /archives/
 ---
 
