--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: base
   </div>  
   {% include share.html %}
   <p>
+    <a href="{{ post.url }}#disqus_thread">Comments</a>
     <br />
     <hr />
   </p>
