--- a/tags.html
+++ b/tags.html
@@ -10,7 +10,7 @@ permalink: /tags/
   <h2>{{ tag_name }}</h2>
   <ul>
     {% for post in site.tags[tag_name] %}
-    <li><a href="{{ site.baseurl }}{{ post.url }}">{{post.title}}</a></li>
+    <li><a href="{{ post.url }}">{{post.title}}</a></li>
     {% endfor %}
   </ul>
 {% endfor %}
